chore-corrected label name for house hold

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/household_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/household_case.component.html
@@ -37,7 +37,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="SoughtHelpDesc">yes, specify</label>
+                        <label for="SoughtHelpDesc">If yes, please specify</label>
                         <input formControlName="SoughtHelpDesc" class="form-control" />
                     </div>
 
