Fix: Corrected the spelling of "If yes"

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/physical-health.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/physical-health.component.html
@@ -55,7 +55,7 @@
                         <span>{{ (yesNoOptionsList | MatchesPipe:physicalHealthForm.AnySubstanceLookupId) }}</span>
                     </div>
                     <div class="form-group">
-                        <label>If yeas, please specify  :</label>
+                        <label>If yes, please specify  :</label>
                         <span>{{ physicalHealthForm.AnySubstanceDesc }}</span>
                     </div>
                     <div class="form-group">
