Fix: Removed unnecessary trailing semi-colons

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/feedback.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/feedback.component.html
@@ -15,7 +15,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="tr-data" *ngFor="let feedback of caseBook.FeedBack;">
+                    <tr class="tr-data" *ngFor="let feedback of caseBook.FeedBack">
                         <td>{{feedback.RespectedDuringYourVisit}}</td>
                         <td>{{feedback.FeelSafeAndSecure}}</td>
                         <td>{{feedback.FeelThatCounselling}}</td>
