--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/mental.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/mental.component.html
@@ -26,7 +26,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let mental of caseBook.vMental;">
+                    <tr *ngFor="let mental of caseBook.vMental">
                         <td>{{mental.MentalDress}}</td>
                         <td>{{mental.MentalHygiene}}</td>
                         <td>{{mental.MentalBodyType}}</td>
