--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/offender.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/offender.component.html
@@ -12,7 +12,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="tr-data" *ngFor="let offender of caseBook.vOffender;">
+                    <tr class="tr-data" *ngFor="let offender of caseBook.vOffender">
                         <td>{{offender.Name}}</td>
                         <td>{{offender.Age}}</td>
                         <td>{{offender.Gender}}</td>
