--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/children.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/children.component.html
@@ -11,7 +11,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="tr-data" *ngFor="let children of caseBook.vChildren; let i = index" >
+                        <tr class="tr-data" *ngFor="let children of caseBook.vChildren" >
                             <td>{{children.Name}}</td>
                             <td>{{children.Age}}</td>
                             <td>{{children.Gender}}</td>
