fix: Changed YearOfMarriage to YearsOfMarriage

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/household_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/household_case.component.html
@@ -175,10 +175,10 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="YearOfMarriage">Year of marriage</label>
-                        <input formControlName="YearOfMarriage" digits maxlength="4" class="form-control" />
-                        <small *ngIf="clientAndHouseholdForm.controls.YearOfMarriage.dirty && clientAndHouseholdForm.controls.YearOfMarriage.invalid">
-                            Please provide a valid year
+                        <label for="YearsOfMarriage">Years of marriage</label>
+                        <input formControlName="YearsOfMarriage" digits maxlength="2" class="form-control" />
+                        <small *ngIf="clientAndHouseholdForm.controls.YearsOfMarriage.dirty && clientAndHouseholdForm.controls.YearsOfMarriage.invalid">
+                            Please provide valid years of marriage
                         </small>
                     </div>
 
