--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/household.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/household.component.html
@@ -101,7 +101,7 @@
                     </div>
                     <div class="form-group">
                         <label>Years of marriage  :</label>
-                        <span>{{familyHouseHold.YearOfMarriage }}</span>
+                        <span>{{familyHouseHold.YearsOfMarriage }}</span>
                     </div>
                     <div class="form-group">
                         <label>At what age did client have her first child?  :</label>
