--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/abuse.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/abuse.component.html
@@ -53,7 +53,7 @@
             </div>
             <div class="card-block info-view">
                 <div class="form-group">
-                    <label>Types of physical abuse - tick all applicable situations  :</label>
+                    <label>Types of physical abuse :</label>
                     <span>{{ (typesOfPhyscialAbuseLookupOptionsList | MatchesPipe:caseAbuseForm.TypesOfPhyscialAbuseLookupId:"multiselect") }}</span>
                 </div>
                 <div class="form-group">
