Fix : Made the please specify field consistent throughout the application

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/physicalHealth_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/physicalHealth_case.component.html
@@ -18,7 +18,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="SufferingFromAnyMajorIllnessDesc">If yes, please specify?</label>
+                        <label for="SufferingFromAnyMajorIllnessDesc">If yes, please specify</label>
                         <input formControlName="SufferingFromAnyMajorIllnessDesc" class="form-control" />
                     </div>
 
@@ -32,7 +32,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="DiagnosedPsychiatricIllnessDesc">If yes, please specify?</label>
+                        <label for="DiagnosedPsychiatricIllnessDesc">If yes, please specify</label>
                         <input formControlName="DiagnosedPsychiatricIllnessDesc" class="form-control" />
                     </div>
 
