--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/abuse.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/abuse.component.html
@@ -30,7 +30,7 @@
                     <span>{{ (signsOfPhysicalAbuseLookupOptionsList | MatchesPipe:caseAbuseForm.SignsOfPhysicalAbuseLookupId) }}</span>
                 </div>
                 <div class="form-group">
-                    <label>Please specify  :</label>
+                    <label>If yes, please specify  :</label>
                     <span>{{ caseAbuseForm.SignsOfPhysicalAbuseDesc }}</span>
                 </div>
                 <div class="form-group">
@@ -38,7 +38,7 @@
                     <span>{{ (weaponsUsedLookupOptionsList | MatchesPipe:caseAbuseForm.WeaponsUsedLookupId:"multiselect") }}</span>
                 </div>
                 <div class="form-group">
-                    <label>Please specify  :</label>
+                    <label>If other, please specify  :</label>
                     <span>{{ caseAbuseForm.WeaponsUsedDesc }}</span>
                 </div>
             </div>
