--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.move.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.move.html
@@ -118,7 +118,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="CenterId">yes, specify</label>
+                                    <label for="CenterId">If yes, please specify</label>
                                     <input [formControl]="category2Form.controls['SoughtHelpDesc']" class="form-control" />
                                 </div>
 
@@ -315,7 +315,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="CenterId">yes, specify</label>
+                                    <label for="CenterId">If yes, please specify</label>
                                     <input [formControl]="category4Form.controls['SoughtHelpDesc']" class="form-control" />
                                 </div>
 
@@ -365,7 +365,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="PeaceMakerId">If self-employed or employed, please specify:</label>
+                                    <label for="PeaceMakerId">If self-employed or employed, please specify</label>
                                     <input [formControl]="category4Form.controls['OccupationDesc']" class="form-control" />
                                 </div>
 
@@ -443,7 +443,7 @@
                             </div>
 
                             <div class="form-group">
-                                <label for="CenterId">If yes, please specify:?</label>
+                                <label for="CenterId">If yes, please specify</label>
                                 <input [formControl]="category4Form.controls['SufferingFromAnyMajorIllnessDesc']" class="form-control" />
                             </div>
 
@@ -457,7 +457,7 @@
                             </div>
 
                             <div class="form-group">
-                                <label for="CenterId">If yes, please specify:?</label>
+                                <label for="CenterId">If yes, please specify</label>
                                 <input [formControl]="category4Form.controls['DiagnosedPsychiatricIllnessDesc']" class="form-control" />
                             </div>
 
@@ -485,7 +485,7 @@
                             </div>
 
                             <div class="form-group">
-                                <label for="CenterId">Please specify:</label>
+                                <label for="CenterId">If yes, please specify</label>
                                 <input [formControl]="category4Form.controls['AnySubstanceDesc']" class="form-control" />
                             </div>
 
@@ -594,7 +594,7 @@
                             </div>
 
                             <div class="form-group">
-                                <label for="CenterId">Please specify</label>
+                                <label for="CenterId">If yes, please specify</label>
                                 <input [formControl]="category4Form.controls['SignsOfPhysicalAbuseDesc']" class="form-control" />
                             </div>
 
