--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/physicalHealth.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/physicalHealth.component.html
@@ -10,7 +10,7 @@
                         <span>{{ (yesNoOptionsList | MatchesPipe:physicalHealthForm.SufferingFromAnyMajorIllnessLookupId) }}</span>
                     </div>
                     <div class="form-group">
-                        <label>If yes, please specify?  :</label>
+                        <label>If yes, please specify  :</label>
                         <span>{{ physicalHealthForm.SufferingFromAnyMajorIllnessDesc }}</span>
                     </div>
                     <div class="form-group">
@@ -18,7 +18,7 @@
                         <span>{{ (yesNoOptionsList | MatchesPipe:physicalHealthForm.DiagnosedPsychiatricIllnessLookupId) }}</span>
                     </div>
                     <div class="form-group">
-                        <label>If yes, please specify?  :</label>
+                        <label>If yes, please specify  :</label>
                         <span>{{ physicalHealthForm.DiagnosedPsychiatricIllnessDesc }}</span>
                     </div>
                     <div class="form-group">
@@ -55,7 +55,7 @@
                         <span>{{ (yesNoOptionsList | MatchesPipe:physicalHealthForm.AnySubstanceLookupId) }}</span>
                     </div>
                     <div class="form-group">
-                        <label>Please specify  :</label>
+                        <label>If yes, please specify  :</label>
                         <span>{{ physicalHealthForm.AnySubstanceDesc }}</span>
                     </div>
                     <div class="form-group">
