--- a/Web/WhitePage.MyWeb.UI/src/app/user/user.create.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/user/user.create.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </tab>
-        <tab heading="Deactivate User" style="width:100%" *ngIf="adminFlag">
+        <tab heading="Deactivate User" style="width:100%" *ngIf="isUserAdmin">
             <div class="row justify-content-center">
                 <div class="col-md-4 d-flex flex-column" style="min-width: 700px">
                     <div class="card">
