--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/primary_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/primary_case.component.html
@@ -14,6 +14,7 @@
                                     placeholder="Select Center"
                                     formControlName="CenterId"
                                     (selected)="onCenterSelected($event)"
+                                    (deselected)="onCenterDeselected()"
                                     [allowClear]="true">
                         </ng-select>
                         <div>
