--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/spouse_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/spouse_case.component.html
@@ -77,6 +77,7 @@
                                    placeholder="Select State"
                                    formControlName="StateLookupId"
                                    (selected)="onSpouseStateSelected($event)"
+                                   (deselected)="onSpouseStateDeselected()"
                                    [allowClear]="true">
                         </ng-select>
                     </div>
