--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.create.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.create.html
@@ -15,6 +15,7 @@
                                    formControlName="CenterId"
                                    [(ngModel)]="caseBook.Case.CenterId"
                                    (selected)="onCenterSelected($event)"
+                                   (deselected)="onCenterDeselected()"
                                    [allowClear]="true">
                         </ng-select>
                         <div>
@@ -105,6 +106,7 @@
                                    formControlName="StateId"
                                    [(ngModel)]="caseBook.SelectedAddress.StateId"
                                    (selected)="onStateSelected($event)"
+                                   (deselected)="onStateDeselected()"
                                    [allowClear]="true">
                         </ng-select>
                         <div>
