fix: Added Spinner to view case and removed few unnecessary lines

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.view.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.view.html
@@ -1,8 +1,4 @@
-﻿<style>
-    .nav nav-tabs {
-        background-color: whitesmoke;
-    }
-</style>
+﻿<my-spinner [isRunning]="!caseBook"></my-spinner>
 <div class="table-responsive">
     <table class="table" *ngIf="caseBook">
         <thead>
