--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/abuse.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/abuse.component.html
@@ -65,7 +65,7 @@
                     <span>{{ caseAbuseForm.NumberOfYearsOfPhyscialAbuse }}</span>
                 </div>
                 <div class="form-group">
-                    <label>Types of emotional abuse - tick all applicable situations  :</label>
+                    <label>Types of emotional abuse :</label>
                     <span>{{ (typesOfEmotionalAbuseLookupOptionsList | MatchesPipe:caseAbuseForm.TypesOfEmotionalAbuseLookupId:"multiselect") }}</span>
                 </div>
                 <div class="form-group">
@@ -77,7 +77,7 @@
                     <span>{{ caseAbuseForm.NumberOfYearsOfEmotionalAbuse }}</span>
                 </div>
                 <div class="form-group">
-                    <label>Types of sexual abuse - tick all applicable situations  :</label>
+                    <label>Types of sexual abuse  :</label>
                     <span>{{ (typesOfSexualAbuseLookupOptionsList | MatchesPipe:caseAbuseForm.TypesOfSexualAbuseLookupId:"multiselect") }}</span>
                 </div>
                 <div class="form-group">
@@ -100,7 +100,7 @@
             </div>
             <div class="card-block info-view">
                 <div class="form-group">
-                    <label>Types of economic abuse - tick all applicable situations  :</label>
+                    <label>Types of economic abuse  :</label>
                     <span>{{ (typesOfEconomicAbuseLookupOptionsList | MatchesPipe:caseAbuseForm.TypesOfEconomicAbuseLookupId:"multiselect") }}</span>
                 </div>
                 <div class="form-group">
