--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/case-management.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/case-management.component.html
@@ -43,7 +43,7 @@
     <div class="col-md-6 d-flex flex-column">
         <div class="card">
             <div class="card-header">
-                Other Info (1)
+                Other Info
             </div>
             <div class="card-block info-view">
                 <div class="form-group">
