--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/abuse.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/abuse.component.html
@@ -57,6 +57,10 @@
                     <span>{{ (typesOfPhyscialAbuseLookupOptionsList | MatchesPipe:caseAbuseForm.TypesOfPhyscialAbuseLookupId:"multiselect") }}</span>
                 </div>
                 <div class="form-group">
+                    <label>If other, please specify  :</label>
+                    <span>{{ caseAbuseForm.PhysicalAbuseDesc }}</span>
+                </div>
+                <div class="form-group">
                     <label>Frequency of physical abuse  :</label>
                     <span>{{ (frequencyOfPhyscialAbuseLookupOptionsList | MatchesPipe:caseAbuseForm.FrequencyOfPhyscialAbuseLookupId) }}</span>
                 </div>
@@ -65,8 +69,12 @@
                     <span>{{ caseAbuseForm.NumberOfYearsOfPhyscialAbuse }}</span>
                 </div>
                 <div class="form-group">
-                    <label>Types of emotional abuse - tick all applicable situations  :</label>
+                    <label>Types of emotional abuse  :</label>
                     <span>{{ (typesOfEmotionalAbuseLookupOptionsList | MatchesPipe:caseAbuseForm.TypesOfEmotionalAbuseLookupId:"multiselect") }}</span>
+                </div>
+                <div class="form-group">
+                    <label>If other, please specify  :</label>
+                    <span>{{ caseAbuseForm.EmotionalAbuseDesc }}</span>
                 </div>
                 <div class="form-group">
                     <label>Frequency of emotional abuse  :</label>
@@ -77,8 +85,12 @@
                     <span>{{ caseAbuseForm.NumberOfYearsOfEmotionalAbuse }}</span>
                 </div>
                 <div class="form-group">
-                    <label>Types of sexual abuse - tick all applicable situations  :</label>
+                    <label>Types of sexual abuse :</label>
                     <span>{{ (typesOfSexualAbuseLookupOptionsList | MatchesPipe:caseAbuseForm.TypesOfSexualAbuseLookupId:"multiselect") }}</span>
+                </div>
+                <div class="form-group">
+                    <label>If other, please specify  :</label>
+                    <span>{{ caseAbuseForm.SexualAbuseDesc }}</span>
                 </div>
                 <div class="form-group">
                     <label>Frequency of sexual abuse  :</label>
@@ -100,8 +112,12 @@
             </div>
             <div class="card-block info-view">
                 <div class="form-group">
-                    <label>Types of economic abuse - tick all applicable situations  :</label>
+                    <label>Types of economic abuse :</label>
                     <span>{{ (typesOfEconomicAbuseLookupOptionsList | MatchesPipe:caseAbuseForm.TypesOfEconomicAbuseLookupId:"multiselect") }}</span>
+                </div>
+                <div class="form-group">
+                    <label>If other, please specify  :</label>
+                    <span>{{ caseAbuseForm.EconomicAbuseDesc }}</span>
                 </div>
                 <div class="form-group">
                     <label>Frequency of economic abuse  :</label>
