fix: MC-41 Display name errors were corrected

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/manage_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/manage_case.component.html
@@ -78,7 +78,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    Other Info (1)
+                    Other Info 
                 </div>
                 <div class="card-block">
 
