fix: MC-52 User Management UX issues.

--- a/Web/WhitePage.MyWeb.UI/src/app/user/peacemaker.create.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/user/peacemaker.create.html
@@ -1,12 +1,18 @@
-﻿<form [formGroup]="addPeacemakerForm" *ngIf="roles" novalidate>
+﻿<form [formGroup]="addPeacemakerForm" novalidate>
     <div class="form-group">
         <label for="firstname">First Name *</label>
         <input placeholder="First Name" id="firstname" class="form-control" formControlName="firstname" />
+        <div>
+            <small *ngIf="addPeacemakerForm.controls.firstname.hasError('required') && addPeacemakerForm.controls.firstname.touched" class="mat-text-warn">First Name is required.</small>
+        </div>
     </div>
 
     <div class="form-group">
         <label for="lastname">Last Name *</label>
         <input placeholder="Last Name" id="lastname" class="form-control" formControlName="lastname" />
+        <div>
+            <small *ngIf="addPeacemakerForm.controls.lastname.hasError('required') && addPeacemakerForm.controls.lastname.touched" class="mat-text-warn">Last Name is required.</small>
+        </div>
     </div>
 
     <div class="form-group">
@@ -20,6 +26,9 @@
     <div class="form-group" *ngIf="isNewLogin">
         <label for="email">Email *</label>
         <input placeholder="Email" id="email" class="form-control" formControlName="email" />
+        <div>
+            <small *ngIf="(addPeacemakerForm.controls.email.hasError('required') || addPeacemakerForm.controls.email.hasError('email')) && addPeacemakerForm.controls.email.touched" class="mat-text-warn">Please provide a valid email.</small>
+        </div>
     </div>
 
     <div class="form-group" *ngIf="isNewLogin">
@@ -31,6 +40,9 @@
                    id="roleId"
                    formControlName="role">
         </ng-select>
+        <div>
+            <small *ngIf="addPeacemakerForm.controls.role.hasError('required') && addPeacemakerForm.controls.role.touched" class="mat-text-warn">Role is required.</small>
+        </div>
     </div>
     
     <div class="form-group">
@@ -42,6 +54,9 @@
                    id="centerId"
                    formControlName="center">
         </ng-select>
+        <div>
+            <small *ngIf="addPeacemakerForm.controls.center.hasError('required') && addPeacemakerForm.controls.center.touched" class="mat-text-warn">Center is required.</small>
+        </div>
     </div>
 
     <div class="form-group" style="text-align: center">
