fix: MC-40 Color of placeholder of all input elements made consistent

--- a/Web/WhitePage.MyWeb.UI/src/scss/core/_ng-select.scss
+++ b/Web/WhitePage.MyWeb.UI/src/scss/core/_ng-select.scss
@@ -50,3 +50,6 @@ ng-select {
         background-color: transparent !important;
     }
 }
+ng-select > div > div.single > div.placeholder {
+    color:white !important;
+}
