--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.create.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.create.html
@@ -79,7 +79,7 @@
         <div class="col-md-4 d-flex flex-column">
             <div class="card flex-fill">
                 <div class="card-header">
-                    Client Details
+                    Client Address Details
                 </div>
                 <div class="card-block">
                     <div class="form-group">
@@ -139,7 +139,7 @@
         <div class="col-md-4 d-flex flex-column">
             <div class="card flex-fill">
                 <div class="card-header">
-                    Client Details (2)
+                    Client Personal Details
                 </div>
                 <div class="card-block">
                     <div class="form-group">
